gestion des validations et de la documentation (apidocs)
