# src/app.ts
@@ -1,8 +1,9 @@
 import  express, { NextFunction } from "express";
 import createHttpError from "http-errors";
 import "express-async-errors";
-import { logger, addTimestamp, errorHandler } from "./middlewares";
-import { healthRouter } from "./routes";
+import { logger, addTimestamp, errorHandler, openApiValidator } from "./middlewares";
+import { apiDocRouter, healthRouter } from "./routes";
+import cors from "cors";
 
 
 
@@ -12,14 +13,16 @@ const port=3000;
 app.use(express.json());
 app.use(addTimestamp);
 app.use(logger);
+app.use(openApiValidator); 
+app.use(cors());
 
 
 
 
 //defining routes
 
-app.use("/health", healthRouter);
-
+app.use("/api/health", healthRouter);
+app.use("/api-docs", apiDocRouter);
 
 //handle route not defined
 app.use((req, res, next:NextFunction)=>{
