# src/routes/index.ts
@@ -1,1 +1,3 @@
 export {router as healthRouter } from "./health";
+// export {router as CalculationRouter} from "./calculator";
+export {router as apiDocRouter} from "./apidocs"
